Fixes columns on mobile view

--- a/_sass/_columns.scss
+++ b/_sass/_columns.scss
@@ -54,6 +54,6 @@
     display: none;
   }
   .column {
-    margin-left: 0;
+    margin-right: 0;
   }
 }
